<resources>
    <string name="app_name">ProjectOne</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_viloyatlar">Viloyat va tumanlar</string>
    <string name="menu_foydalanuvchilar">Foydalanuvchilar</string>
    <string name="menu_malumotlar">Ma`lumotlar</string>
    <string name="menu_reestr">Reestr</string>
    <string name="menu_hisobot">Hisobot</string>
    <string name="menu_rote">Role</string>
    <string name="menu_order">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>