<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_viloyatlar"
            android:icon="@drawable/nav_viloyat"
            android:title="@string/menu_viloyatlar" />
        <item
            android:id="@+id/nav_foydalanuvchilar"
            android:icon="@drawable/ic_nav_person"
            android:title="@string/menu_foydalanuvchilar" />
        <item
            android:id="@+id/nav_malumotlar"
            android:icon="@drawable/ic_malumotlar"
            android:title="@string/menu_malumotlar" />
        <item
            android:id="@+id/nav_restr"
            android:icon="@drawable/ic_rester"
            android:title="@string/menu_reestr" />
        <item
            android:id="@+id/nav_hisobot"
            android:icon="@drawable/ic_hisobot"
            android:title="@string/menu_hisobot" />
        <item
            android:id="@+id/nav_roole"
            android:icon="@drawable/ic_role"
            android:title="@string/menu_rote" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/menu_order" />

    </group>
</menu>